# makehuman-custom

./: .gitignore
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branch2-served  hgtagsfnodes1  rbc-revs-v1
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
.hg/store/data/buildscripts/: build__prepare.py.i  hg__sync.py.i  verify__eol.py.i
.hg/store/data/makehuman/: compile__models.py.i  compile__targets.py.i  download__assets.py.i  makehuman.i  makehuman.py.i
.hg/store/data/maketarget-standalone/: maketarget-gui.py.i  maketarget.py.i  maketargetlib.py.i
blendertools/import_runtime_mhx2/: import_runtime_mhx2
blendertools/makewalk/: makewalk
makehuman-utils/: .hg_archival.txt
makehuman-utils/io_mhrigging_mhskel/: __init__.py  export_mh_rigging.py  shared_mh_rigging.py
makehuman-utils/weighting/: genrig.py
makehuman/data/: images.list
makehuman/data/3dobjs/: a7_converter.mhpxy  axis.npz  base.mhpxy  base.npz
makehuman/data/clothes/fedora01/: fedora.mhpxy  fedora.npz  fedora_cocked.mhpxy  fedora_cocked.npz
makehuman/data/modifiers/: labels.json  modeling_modifiers.json
makehuman/lib/: qtgui.py
makehuman/plugins/: 7_shell.py
makehuman/plugins/3_libraries_skeleton/: skeletonlibrary.py
makehuman/plugins/7_modeling_body_random/: __init__.py
makehuman/plugins/8_server_socket/: workerthread.py
makeskin/: CMakeLists.txt  makeskin.cpp  makeskin.project  makeskin.workspace
makeskin/.codelite/: makeskin.session  refactoring.db
mhrc/: genericCommand.py
mhrc/mhrc/: JsonCall.py
(+315 files in other folders)
